# scrimshady

./: .gitignore  Cargo.toml  README.md  build.rs  scrimshady.manifest  scrimshady.rc
shaders/: lightning.hlsl  passthru.hlsl  sorty.hlsl  tiles.hlsl  wobbly.hlsl
src/: main.rs
